--- a/index.html
+++ b/index.html
@@ -1,13 +1,27 @@
 <!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
-  </head>
-  <body>
-    <div id="root" style="position: absolute;width: 100%;height: 100%"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+<html lang="de">
+<head>
+    <meta charset="UTF-8"/>
+    <link rel="icon" type="image/svg+xml" href="/bike.svg"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>Cycling Quality Index Wien</title>
+
+    <meta property="og:locale" content="de">
+    <meta property="og:title" content="Cycling Quality Index Wien">
+    <meta property="og:description"
+          content="Eine Klassifizierung der Fahrradfreundlichkeit und -eignung des Straßennetzes">
+    <meta property="og:image" content="/bike.svg">
+    <!-- We let the Twitter (…) figure out the given URL, so we don't accidentally overwrite params and such  -->
+    <!-- <meta property="og:url" content="…"> -->
+    <meta name="twitter:title" content="Cycling Quality Index Wien">
+    <meta name="twitter:description"
+          content="Eine Klassifizierung der Fahrradfreundlichkeit und -eignung des Straßennetzes">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:image" content="/social-sharing.png">
+    <meta name="twitter:image:alt" content="/social-sharing.png">
+</head>
+<body>
+<div id="root" style="position: absolute;width: 100%;height: 100%"></div>
+<script type="module" src="/src/main.tsx"></script>
+</body>
 </html>
