[NEW] modify for Neuss

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="de">
 <head>
     <meta charset="UTF-8"/>
-    <link rel="icon" type="image/svg+xml" href="/bike.svg"/>
+    <link rel="icon" type="image/svg+xml" href="bike.svg"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Cycling Quality Index Wien</title>
 
@@ -22,6 +22,6 @@
 </head>
 <body>
 <div id="root" style="position: absolute;width: 100%;height: 100%"></div>
-<script type="module" src="/src/main.tsx"></script>
+<script type="module" src="src/main.tsx"></script>
 </body>
 </html>
